--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -526,7 +526,28 @@
     </p>
 
     <p>
-        Ejecuta <b>SimpleOps</b> (F5) y presiona el botón <i>Hacer Pruebas para Habilitar la Facturación Electrónica en la DIAN</i>.
+        Ejecuta <b>SimpleOps</b> (F5) y presiona el botón <i>Hacer Pruebas para Habilitar la Facturación Electrónica en la DIAN</i>. Se generarán
+        las mismas facturas que en las pruebas internas, pero esta vez le informará a la DIAN que cuenten a las requeridas para 
+        habilitar a tu empresa como facturador electrónico. Al recibir el primer mensaje de éxito (de la primera factura) no hagas
+        clic inmediatamente en <i>Aceptar</i>, espera un par de minutos y después haz clic en <i>Aceptar</i>. Esto es necesario porque en ocasiones
+        el servidor de la DIAN no acepta las notas crédito y débito si se hacen muy seguidas a la primera factura. 
+        Haz clic en <i>Aceptar</i> en los siguientes mensajes de éxito hasta que termine con todos.
+    </p>
+
+    <p>
+        Ingresa al portal de habilitación de la DIAN y te aparecerá un mensaje que te pide la fecha de inicio de producción. Esta es la fecha
+        a partir de la cual empezarás a facturar electrónicamente con <b>SimpleOps</b>. Selecciona la fecha y haz clic en <i>Aceptar</i>.
+        Haz clic en <i>Aceptar</i> en el siguiente mensaje y habrás terminado las pruebas de habilitación.
+    </p>
+    <img src="Imagenes/Habilitación Facturación Electrónica DIAN/FechaInicioProducción.png" />
+
+    <h3>Solicitar la Resolución de Facturación Electrónica a la DIAN</h3>
+    <p>
+        Para poder iniciar la facturación electrónica con <b>SimpleOps</b>, se requiere informarle a la DIAN el prefijo y el rango de 
+        numeración que usarás en tus facturas electrónicas. Este procedimiento normalmente lo realiza el contador o representante legal 
+        de tu empresa ya que implica ingresar al portal de la DIAN con su contraseña. Puedes ver <a href="https://vimeo.com/369961366">este video</a>
+        para conocer cómo se realiza. Una vez realizado, solicítale el archivo de la resolución a la persona encargada, 
+        lo necesitarás para el siguiente paso.
     </p>
 
 </body>
