--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -272,7 +272,7 @@
 
     <p>
         Para los valores <b>[Texto]</b> usa dobles comillas ("") y para los <b>[Número]</b> ninguna comilla y punto como separador de decimales.
-        Los textos debes preprocesarlos con <a href="https://www.freeformatter.com/json-escape.html#ad-output">esta utilidad</a>.
+        Los textos debes preprocesarlos con <a href="https://www.freeformatter.com/json-escape.html">esta utilidad</a>.
         Ingresa el texto en el cuadro, haz clic en <i>ESCAPE</i>,
         copia el texto del cuadro <i>Escaped string</i> y pégalo en el archivo. Por ejemplo, el texto <i>D:\Programas\SimpleOps\Firma Electrónica</i>
         se convierte en <i>D:\\Programas\\SimpleOps\\Firma Electr\u00F3nica</i>, que es el texto que se debe usar.
@@ -320,7 +320,7 @@
     <p>
         Para los valores <b>[Fecha]</b> usa el formato "YYYY-MM-DDT00:00:00Z" (con dobles comillas) y para los <b>[Booleano]</b>
         usa true o false (sin comillas).
-        Si un texto tiene tildes o eñes debes preprocesarlo con <a href="https://www.freeformatter.com/json-escape.html#ad-output">esta utilidad</a>,
+        Si un texto tiene tildes o eñes debes preprocesarlo con <a href="https://www.freeformatter.com/json-escape.html">esta utilidad</a>,
         si no las tiene lo puedes ingresar sin preprocesarlo.
     </p>
 
