--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -171,10 +171,12 @@
 
     <h3>Instalación de SimpleOps</h3>
     <p>
-        <b>SimpleOps</b> se encuentra en una etapa preliminar de desarrollo, por lo tanto aún no cuenta con instalador y la mejor
+        <b>SimpleOps</b> se encuentra en desarrollo, por lo tanto aún no cuenta con instalador y la mejor
         manera de ejecutarlo es directamente desde el código fuente. Para ejecutar el código necesitarás
-        <a href="https://visualstudio.microsoft.com/es/vs/community/">Visual Studio</a>. Si quieres ejecutar <b>SimpleOps</b> sin necesidad
-        de instalar Visual Studio, me puedes escribir a vixark@outlook.com explicándome tu caso.
+        <a href="https://visualstudio.microsoft.com/es/vs/community/">Visual Studio</a>. Si ya tienes instalado Visual Studio, actualízalo
+        a la última versión (busca y abre Visual Studio Installer en Windows). Si quieres ejecutar <b>SimpleOps</b> sin necesidad
+        de instalar Visual Studio, me puedes escribir a vixark@outlook.com explicándome tu caso, pero antes asegúrate de leer 
+        <a href="https://github.com/vixark/SimpleOps#licencia">la licencia</a>.
     </p>
 
     <p>
