--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -250,12 +250,6 @@
                 <b>RutaAplicación:</b> Cámbialo por <i>[CarpetaProgramas]\SimpleOps</i>
             </li>
             <li>
-                <b>ModoDesarrolloPlantillas:</b> Establécelo en <i>false</i>.
-            </li>
-            <li>
-                <b>HabilitarPruebasUnitarias:</b> Cámbialo por <i>true</i>.
-            </li>
-            <li>
                 <b>ModoIntegraciónTerceros:</b> Si quieres habilitar la facturación electrónica en un programa tercero (otro ERP, Excel u otro) mediante
                 <b>SimpleOps</b>, establécelo en <i>true</i>. Si quieres usar <b>SimpleOps</b>
                 como tu ERP y facturador electrónico establécelo en <i>false</i>. <b>Nota:</b> A enero de 2021, <b>SimpleOps</b> aún no tiene interfaz
@@ -264,7 +258,8 @@
         </ul>
 
     </p>
-    <img src="../Guías/Imagenes/Instalación y Habilitación Facturación Electrónica/ClaseConfiguración.png" />
+    <img src="Imagenes/Instalación y Habilitación Facturación Electrónica/ArchivoConfiguración.png" />
+
     <p>
         Estos cambios deberás hacerlos la primera vez que abras el código y
         cada vez que te salga el error <i>No se pueden incorporar los cambios...</i> al intentar actualizar el código.
@@ -275,8 +270,6 @@
         que realizaste correctamente los pasos anteriores y que se creo la base de datos y todos los archivos necesarios para ejecutar <b>SimpleOps</b>.
         Vuelve al código y suspende la ejecución (Shift + F5).
     </p>
-
-
 
     <h2 id="paso4">4. Configuración de SimpleOps en tu Computador</h2>
     <p>
