--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -612,6 +612,10 @@
         el archivo <i>Empresa.json</i>, haz una copia de <i>Empresa - Producción.json</i> y renómbra la copia a <i>Empresa.json</i>.
     </p>
 
+    <p>
+        Ejecuta <b>SimpleOps</b> y haz clic en el botón <i>Obtener Clave Tecnica</i>.
+    </p>
+
 
 </body>
 
