--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -606,16 +606,31 @@
 
     </p>
     <img src="Imagenes/Instalación y Habilitación Facturación Electrónica/AutorizaciónNumeraciónFacturaciónElectrónica.png" />
+    <p>Presiona <i>Ctrl + S</i> para guardar los cambios realizados.</p>
 
     <p>
-        Presiona <i>Ctrl + S</i> para guardar los cambios realizados. Vuelve a la carpeta <i>[CarpetaProgramas]\SimpleOps\Opciones</i>, elimina
-        el archivo <i>Empresa.json</i>, haz una copia de <i>Empresa - Producción.json</i> y renómbra la copia a <i>Empresa.json</i>.
+        Ingresa a <a href="https://www.dian.gov.co">www.dian.gov.co</a> y haz clic en
+        <i>Temas de interés > Factura Electrónica > Facturando Electrónicamente</i> e ingresa de la misma manera que al portal de habilitación.
+        Después de ingresar al portal de facturador haz clic en <i>Partipantes > Asociar prefijos</i>. En <i>Proveedor - Software</i> selecciona
+        la opción <i>[NombreDeTuEmpresa] - SimpleOps[NitDeTuEmpresa]</i>, en <i>Prefijo</i> selecciona la opción que contiene el prefijo, número
+        de resolución y rango de numeración recién autorizado y haz clic en <i>Agregar</i>. Verifica que la fecha de expiración sea la misma que 
+        ingresaste en <i>Empresa - Producción.json</i> > <i>FinAutorizaci\u00F3nFacturaci\u00F3n</i>.
+    </p>
+    <img src="Imagenes/Instalación y Habilitación Facturación Electrónica/AsociaciónPrefijosPortalDIAN.png" />
+
+
+    <p>
+        Vuelve a la carpeta <i>[CarpetaProgramas]\SimpleOps\Opciones</i>, elimina
+        el archivo <i>Empresa.json</i>, haz una copia de <i>Empresa - Producción.json</i> y renombra la copia a <i>Empresa.json</i>.
+        <b>Advertencia:</b> Con este cambio, <b>SimpleOps</b> funcionará en modo de producción de facturación electrónica y las facturas que se generen 
+        serán legalmente válidas ante la DIAN.
     </p>
 
     <p>
         Ejecuta <b>SimpleOps</b> y haz clic en el botón <i>Obtener Clave Tecnica</i>.
     </p>
 
+    <p>Este procedimiento lo deberás ha cer cada vez,, este el y el anterior....</p>
 
 </body>
 
